--- a/index.html
+++ b/index.html
@@ -32,18 +32,24 @@
       <img class="img-flex" src="images/Colossus_of_Rhodes.jpg" alt="Colossus of Rhodes">
       <h2>Colossus of Rhodes</h2>
       <dl>
-        <dt>Date of construction: 292–280 BC</dt>
-        <dt>Builders: Greeks</dt>
-        <dt>Location: Rhodes, Greece</dt>
+        <dt>Date of construction:</dt>
+        <dd>292–280 BC</dd>
+        <dt>Builders:</dt>
+        <dd>Greeks</dd>
+        <dt>Location:</dt>
+        <dd>Rhodes, Greece</dd>
       <dl>
     </div>
     <div>
       <img class="img-flex" src="images/Hanging_Gardens_of_Babylon.jpg">
       <h2>Hanging Gardens of Babylon</h2>
       <dl>
-        <dt>Date of construction: Circa 600 BC</dt>
-        <dt>Builders: Babylonians</dt>
-        <dt>Location: Nineveh, Iraq</dt>
+        <dt>Date of construction:</dt>
+        <dd>Circa 600 BC</dd>
+        <dt>Builders:</dt>
+        <dd>Babylonians</dd>
+        <dt>Location:</dt>
+        <dd>Nineveh, Iraq</dd>
       </dl>
     </div>
   </div>
