--- a/index.html
+++ b/index.html
@@ -6,51 +6,68 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700" rel="stylesheet">
 </head>
 <body>
 
-  <div>
-    <div>
-      <img class="img-flex" src="images/Maerten_van_Heemskerck_-_Panorama_with_the_Abduction_of_Helen_Amidst_the_Wonders_of_the_Ancient_World_-_Walters_37656.jpg" alt"Seven Wonder">
-      <h1>The Seven Wonders of the Ancient World</h1>
-      <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
-      <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+  <div class="grid">
+    <div class="unit">
+      <div class="unit l-2-3">
+        <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt"Seven Wonder">
+      </div>
+      <div class="unit l-1-3">
+        <h1>The Seven Wonders of the Ancient World</h1>
+        <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
+        <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+      </div>
     </div>
-    <div>
-      <img class="img-flex" src="images/Temple_of_Artemis.jpg" alt="Temple of Artemis">
-      <h2>Temple of Artemis</h2>
-      <dl>
-        <dt>Date of construction:</dt>
-        <dd>Circa 550 BC</dd>
-        <dt>Builders:</dt>
-        <dd>Greeks</dd>
-        <dt>Location:</dt>
-        <dd>Selçuk, Turkey</dd>
-      <dl>
+    <div class="unit">
+      <div class="unit l-1-3">
+        <img class="img-flex" src="images/temple-of-artemis.jpg" alt="Temple of Artemis">
+      </div>
+      <div class="unit l-1-3">
+        <h2>Temple of Artemis</h2>
+        <dl>
+          <dt>Date of construction:</dt>
+          <dd>Circa 550 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Greeks</dd>
+          <dt>Location:</dt>
+          <dd>Selçuk, Turkey</dd>
+        <dl>
+      </div>
     </div>
-    <div>
-      <img class="img-flex" src="images/Colossus_of_Rhodes.jpg" alt="Colossus of Rhodes">
-      <h2>Colossus of Rhodes</h2>
-      <dl>
-        <dt>Date of construction:</dt>
-        <dd>292–280 BC</dd>
-        <dt>Builders:</dt>
-        <dd>Greeks</dd>
-        <dt>Location:</dt>
-        <dd>Rhodes, Greece</dd>
-      <dl>
+    <div class="unit">
+      <div class="unit l-1-3">
+        <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="Colossus of Rhodes">
+      </div>
+      <div class="unit l-1-3">
+        <h2>Colossus of Rhodes</h2>
+        <dl>
+          <dt>Date of construction:</dt>
+          <dd>292–280 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Greeks</dd>
+          <dt>Location:</dt>
+          <dd>Rhodes, Greece</dd>
+        <dl>
+      </div>
     </div>
-    <div>
-      <img class="img-flex" src="images/Hanging_Gardens_of_Babylon.jpg">
-      <h2>Hanging Gardens of Babylon</h2>
-      <dl>
-        <dt>Date of construction:</dt>
-        <dd>Circa 600 BC</dd>
-        <dt>Builders:</dt>
-        <dd>Babylonians</dd>
-        <dt>Location:</dt>
-        <dd>Nineveh, Iraq</dd>
-      </dl>
+    <div class="unit">
+      <div class="unit l-1-3">
+        <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg">
+      </div>
+      <div class="unit l-1-3">
+        <h2>Hanging Gardens of Babylon</h2>
+        <dl>
+          <dt>Date of construction:</dt>
+          <dd>Circa 600 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Babylonians</dd>
+          <dt>Location:</dt>
+          <dd>Nineveh, Iraq</dd>
+        </dl>
+      </div>
     </div>
   </div>
 
