added figure and figcaption to index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="grid">
     <div class="unit">
       <div class="unit l-2-3">
-        <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt"Seven Wonder">
+        <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="Ancient World Walters">
       </div>
       <div class="unit l-1-3">
         <h1>The Seven Wonders of the Ancient World</h1>
@@ -22,52 +22,52 @@
       </div>
     </div>
     <div class="unit">
-      <div class="unit l-1-3">
+      <figure class="unit l-1-3">
         <img class="img-flex" src="images/temple-of-artemis.jpg" alt="Temple of Artemis">
-      </div>
-      <div class="unit l-1-3">
-        <h2>Temple of Artemis</h2>
-        <dl>
-          <dt>Date of construction:</dt>
-          <dd>Circa 550 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Greeks</dd>
-          <dt>Location:</dt>
-          <dd>Selçuk, Turkey</dd>
-        <dl>
-      </div>
+        <figcaption class="unit l-1-3">
+          <h2>Temple of Artemis</h2>
+          <dl>
+            <dt>Date of construction:</dt>
+            <dd>Circa 550 BC</dd>
+            <dt>Builders:</dt>
+            <dd>Greeks</dd>
+            <dt>Location:</dt>
+            <dd>Selçuk, Turkey</dd>
+          </dl>
+        </figcaption>
+      </figure>
     </div>
     <div class="unit">
-      <div class="unit l-1-3">
+      <figure class="unit l-1-3">
         <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="Colossus of Rhodes">
-      </div>
-      <div class="unit l-1-3">
-        <h2>Colossus of Rhodes</h2>
-        <dl>
-          <dt>Date of construction:</dt>
-          <dd>292–280 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Greeks</dd>
-          <dt>Location:</dt>
-          <dd>Rhodes, Greece</dd>
-        <dl>
-      </div>
+        <figcaption class="unit l-1-3">
+          <h2>Colossus of Rhodes</h2>
+          <dl>
+            <dt>Date of construction:</dt>
+            <dd>292–280 BC</dd>
+            <dt>Builders:</dt>
+            <dd>Greeks</dd>
+            <dt>Location:</dt>
+            <dd>Rhodes, Greece</dd>
+          </dl>
+        </figcaption>
+      </figure>
     </div>
     <div class="unit">
-      <div class="unit l-1-3">
-        <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg">
-      </div>
-      <div class="unit l-1-3">
-        <h2>Hanging Gardens of Babylon</h2>
-        <dl>
-          <dt>Date of construction:</dt>
-          <dd>Circa 600 BC</dd>
-          <dt>Builders:</dt>
-          <dd>Babylonians</dd>
-          <dt>Location:</dt>
-          <dd>Nineveh, Iraq</dd>
-        </dl>
-      </div>
+      <figure class="unit l-1-3">
+        <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg" alt="Hanging Gardens">
+        <figcaption class="unit l-1-3">
+          <h2>Hanging Gardens of Babylon</h2>
+          <dl>
+            <dt>Date of construction:</dt>
+            <dd>Circa 600 BC</dd>
+            <dt>Builders:</dt>
+            <dd>Babylonians</dd>
+            <dt>Location:</dt>
+            <dd>Nineveh, Iraq</dd>
+          </dl>
+        </figcaption>
+      </figure>
     </div>
   </div>
 
