--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <body>
 
   <div class="grid">
-    <div class="unit">
-      <div class="unit l-2-3">
+    <div class="unit xs-1">
+      <figure>
         <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="Ancient World Walters">
-      </div>
-      <div class="unit l-1-3">
-        <h1>The Seven Wonders of the Ancient World</h1>
-        <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
-        <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
-      </div>
+        <figcaption>
+          <h1>The Seven Wonders of the Ancient World</h1>
+          <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
+          <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+        </figcaption>
+      </figure>
     </div>
-    <div class="unit">
-      <figure class="unit l-1-3">
+    <div class="unit xs-1">
+      <figure>
         <img class="img-flex" src="images/temple-of-artemis.jpg" alt="Temple of Artemis">
-        <figcaption class="unit l-1-3">
+        <figcaption>
           <h2>Temple of Artemis</h2>
           <dl>
             <dt>Date of construction:</dt>
@@ -37,10 +37,10 @@
         </figcaption>
       </figure>
     </div>
-    <div class="unit">
-      <figure class="unit l-1-3">
+    <div class="unit xs-1">
+      <figure>
         <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="Colossus of Rhodes">
-        <figcaption class="unit l-1-3">
+        <figcaption>
           <h2>Colossus of Rhodes</h2>
           <dl>
             <dt>Date of construction:</dt>
@@ -53,10 +53,10 @@
         </figcaption>
       </figure>
     </div>
-    <div class="unit">
-      <figure class="unit l-1-3">
+    <div class="unit xs-1">
+      <figure>
         <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg" alt="Hanging Gardens">
-        <figcaption class="unit l-1-3">
+        <figcaption>
           <h2>Hanging Gardens of Babylon</h2>
           <dl>
             <dt>Date of construction:</dt>
