--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
 <body>
 
   <div class="grid">
-    <div class="unit xs-1">
+    <div class="unit xs-1 s-1 m-1">
       <figure>
-        <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="Ancient World Walters">
-        <figcaption>
+        <div class="unit l-2-3">
+          <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="Ancient World Walters">
+        </div>
+        <figcaption class="unit l-1-3">
           <h1>The Seven Wonders of the Ancient World</h1>
           <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
           <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
         </figcaption>
       </figure>
     </div>
-    <div class="unit xs-1">
+    <div class="unit xs-3-4 s-1-3 s-3-4 m-1-4 l-1-4">
       <figure>
         <img class="img-flex" src="images/temple-of-artemis.jpg" alt="Temple of Artemis">
         <figcaption>
@@ -37,7 +39,7 @@
         </figcaption>
       </figure>
     </div>
-    <div class="unit xs-1">
+    <div class="unit xs-3-4 s-1-3 m-1-4 l-1-4">
       <figure>
         <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="Colossus of Rhodes">
         <figcaption>
@@ -53,7 +55,7 @@
         </figcaption>
       </figure>
     </div>
-    <div class="unit xs-1">
+    <div class="unit xs-3-4 s-1-3 m-1-4 l-1-4">
       <figure>
         <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg" alt="Hanging Gardens">
         <figcaption>
