--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <div class="grid">
+  <div class="grid grid-middle grid-stretch">
     <div class="unit xs-1 s-1 m-1">
       <figure>
         <div class="unit l-2-3">
