--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
 </head>
 <body>
 
-  <div class="grid grid-middle grid-stretch">
-    <div class="unit xs-1 s-1 m-1">
-      <figure>
-        <div class="unit l-2-3">
-          <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="Ancient World Walters">
-        </div>
-        <figcaption class="unit l-1-3">
-          <h1>The Seven Wonders of the Ancient World</h1>
-          <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
-          <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
-        </figcaption>
-      </figure>
+  <div class="grid">
+    <div class="unit xs-1 s-1 m-1 l-1">
+      <div class="grid">
+        <figure>
+          <div class="unit l-2-3">
+            <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="Ancient World Walters">
+          </div>
+          <figcaption class="unit l-1-3">
+            <h1>The Seven Wonders of the Ancient World</h1>
+            <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
+            <p class="body">Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+          </figcaption>
+        </figure>
+      </div>
     </div>
     <div class="unit xs-3-4 s-1-3 s-3-4 m-1-4 l-1-4">
       <figure>
