--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </figure>
   </div>
   <div class="grid">
-    <div class="unit xs-3-4 s-1-3 s-3-4 m-1-4 l-1-3 xl-1-4">
+    <div class="unit xs-3-4 s-1 m-1-4 l-1-3 xl-1-4 gutter">
       <figure>
         <img class="img-flex" src="images/temple-of-artemis.jpg" alt="Temple of Artemis">
         <figcaption>
@@ -39,7 +39,7 @@
         </figcaption>
       </figure>
     </div>
-    <div class="unit xs-3-4 s-1-3 m-1-4 l-1-3 xl-1-4">
+    <div class="unit xs-3-4 s-1-2 m-1-4 l-1-3 xl-1-4 gutter">
       <figure>
         <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="Colossus of Rhodes">
         <figcaption>
@@ -55,7 +55,7 @@
         </figcaption>
       </figure>
     </div>
-    <div class="unit xs-3-4 s-1-3 m-1-4 l-1-3 xl-1-4">
+    <div class="unit xs-3-4 s-1-2 m-1-4 l-1-3 xl-1-4 gutter">
       <figure>
         <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg" alt="Hanging Gardens">
         <figcaption>
